--- a/_publications/CIBM202406.md
+++ b/_publications/CIBM202406.md
@@ -2,7 +2,7 @@
 title: "A survey on advancements in image–text multimodal models: From general techniques to biomedical implementations"
 collection: publications
 category: manuscripts
-permalink: /publication/2009-10-01-paper-title-number-1
+permalink: /publication/CBM202406
 excerpt: 'Pending replenishment.'
 date: 2024-6
 venue: 'Computers in Biilogy And Medicine'
