Update and rename 2024-02-17-paper-title-number-4.md to SMC202410.md

--- a/_publications/SMC202410.md
+++ b/_publications/SMC202410.md
@@ -2,7 +2,7 @@
 title: "Faster and More Efficient Subject Image Generation for Text-to-Image Diffusion Models"
 collection: publications
 category: conferences
-permalink: /publication/2024-02-17-paper-title-number-4
+permalink: /publication/SMC202410
 excerpt: 'Pending replenishment.'
 date: 2024-10
 venue: '2024 IEEE International Conference on Systems, Man, and Cybernetics (SMC)'
